[gd_scene load_steps=56 format=3 uid="uid://cebdktctmqwqa"]

[ext_resource type="Script" path="res://FireWorm.gd" id="1_buwh1"]
[ext_resource type="Texture2D" uid="uid://cvmjpe5s7xvyi" path="res://Enemies/Fire Worm/Attack.png" id="2_4eb20"]
[ext_resource type="Texture2D" uid="uid://2mhyjh3ra0hl" path="res://Enemies/Fire Worm/Death.png" id="3_m5hir"]
[ext_resource type="Texture2D" uid="uid://dgm5dlc142ei5" path="res://Enemies/Fire Worm/Get Hit.png" id="4_j2h76"]
[ext_resource type="Texture2D" uid="uid://c5pvlg7efamaj" path="res://Enemies/Fire Worm/Idle.png" id="5_45r28"]
[ext_resource type="Texture2D" uid="uid://bodpo84s8ts8x" path="res://Enemies/Fire Worm/Walk.png" id="6_2hubl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60vr8"]
size = Vector2(52, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayd5t"]
atlas = ExtResource("2_4eb20")
region = Rect2(0, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_su2ah"]
atlas = ExtResource("2_4eb20")
region = Rect2(90, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo54b"]
atlas = ExtResource("2_4eb20")
region = Rect2(180, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_viaop"]
atlas = ExtResource("2_4eb20")
region = Rect2(270, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q8t2"]
atlas = ExtResource("2_4eb20")
region = Rect2(360, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_526cq"]
atlas = ExtResource("2_4eb20")
region = Rect2(450, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w6vq"]
atlas = ExtResource("2_4eb20")
region = Rect2(540, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq3k7"]
atlas = ExtResource("2_4eb20")
region = Rect2(630, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_lya3w"]
atlas = ExtResource("2_4eb20")
region = Rect2(720, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v31x"]
atlas = ExtResource("2_4eb20")
region = Rect2(810, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwo5f"]
atlas = ExtResource("2_4eb20")
region = Rect2(900, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3r6l"]
atlas = ExtResource("2_4eb20")
region = Rect2(990, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_chemc"]
atlas = ExtResource("2_4eb20")
region = Rect2(1080, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pqqr"]
atlas = ExtResource("2_4eb20")
region = Rect2(1170, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r7rf"]
atlas = ExtResource("2_4eb20")
region = Rect2(1260, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_1btn1"]
atlas = ExtResource("2_4eb20")
region = Rect2(1350, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_vufek"]
atlas = ExtResource("3_m5hir")
region = Rect2(0, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv37r"]
atlas = ExtResource("3_m5hir")
region = Rect2(90, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_akao4"]
atlas = ExtResource("3_m5hir")
region = Rect2(180, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_f80lt"]
atlas = ExtResource("3_m5hir")
region = Rect2(270, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrfnr"]
atlas = ExtResource("3_m5hir")
region = Rect2(360, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjpky"]
atlas = ExtResource("3_m5hir")
region = Rect2(450, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_deq2v"]
atlas = ExtResource("3_m5hir")
region = Rect2(540, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_74dcj"]
atlas = ExtResource("3_m5hir")
region = Rect2(630, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_at5f3"]
atlas = ExtResource("4_j2h76")
region = Rect2(0, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt0b6"]
atlas = ExtResource("4_j2h76")
region = Rect2(90, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_anpis"]
atlas = ExtResource("4_j2h76")
region = Rect2(180, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_88weg"]
atlas = ExtResource("5_45r28")
region = Rect2(0, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv1aa"]
atlas = ExtResource("5_45r28")
region = Rect2(90, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f7an"]
atlas = ExtResource("5_45r28")
region = Rect2(180, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_vndun"]
atlas = ExtResource("5_45r28")
region = Rect2(270, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndhvo"]
atlas = ExtResource("5_45r28")
region = Rect2(360, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk10o"]
atlas = ExtResource("5_45r28")
region = Rect2(450, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfo55"]
atlas = ExtResource("5_45r28")
region = Rect2(540, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_f65r4"]
atlas = ExtResource("5_45r28")
region = Rect2(630, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw601"]
atlas = ExtResource("5_45r28")
region = Rect2(720, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_panfw"]
atlas = ExtResource("6_2hubl")
region = Rect2(0, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_laxma"]
atlas = ExtResource("6_2hubl")
region = Rect2(90, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwspu"]
atlas = ExtResource("6_2hubl")
region = Rect2(180, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr8vn"]
atlas = ExtResource("6_2hubl")
region = Rect2(270, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_o27ev"]
atlas = ExtResource("6_2hubl")
region = Rect2(360, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjerw"]
atlas = ExtResource("6_2hubl")
region = Rect2(450, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4l43"]
atlas = ExtResource("6_2hubl")
region = Rect2(540, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl3k8"]
atlas = ExtResource("6_2hubl")
region = Rect2(630, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_upegb"]
atlas = ExtResource("6_2hubl")
region = Rect2(720, 0, 90, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_rocus"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayd5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_su2ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo54b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viaop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q8t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_526cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w6vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq3k7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lya3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v31x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwo5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3r6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chemc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pqqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r7rf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1btn1")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vufek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv37r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akao4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f80lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrfnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjpky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_deq2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74dcj")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_at5f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt0b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anpis")
}],
"loop": true,
"name": &"Hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88weg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv1aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f7an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vndun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndhvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk10o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfo55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f65r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw601")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_panfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_laxma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwspu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr8vn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o27ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjerw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4l43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl3k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upegb")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kowqh"]
radius = 500.1

[sub_resource type="CircleShape2D" id="CircleShape2D_t4jym"]
radius = 247.13

[node name="FireWorm" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_buwh1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -2)
shape = SubResource("RectangleShape2D_60vr8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rocus")
animation = &"Attack"
autoplay = "Idle"
frame = 11
frame_progress = 0.00836484

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="DetectionRadius" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_kowqh")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="UndetectionRadius" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_t4jym")
debug_color = Color(0.991769, 0, 0.261173, 0.42)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_area_2d_body_shape_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
